vendor folder added back in

--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -8,6 +8,7 @@
 // Components
 @import "components/buttons.scss";
 @import "components/navbar.scss";
+@import "components/modal.scss";
 
 // Layout
 @import "layout/masthead.scss";
