--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -72,31 +72,13 @@
 
 .portfolio-modal {
   .modal-dialog {
-    margin: 1rem;
-    max-width: 100vw;
+    margin: 5rem;
+    max-width: 80vw;
   }
   .modal-content {
-    padding: 100px 0;
+    padding: 0;
     text-align: center;
-    h2 {
-      font-size: 3em;
-      margin-bottom: 15px;
-    }
-    p {
-      margin-bottom: 30px;
-    }
-    p.item-intro {
-      font-size: 16px;
-      font-style: italic;
-      margin: 20px 0 30px;
-      @include serif-font;
-    }
-    ul.list-inline {
-      margin-top: 0;
-      margin-bottom: 30px;
-    }
-    img {
-      margin-bottom: 30px;
+    width: 80%;
     }
     button {
       cursor: pointer;
