--- a/css/agency.css
+++ b/css/agency.css
@@ -28,7 +28,11 @@ h1 {
   font-weight: 700;
 }
 
-h2, h3, h4, h5, h6 {
+h2 {
+  font-weight: 300;
+}
+
+h3, h4, h5, h6 {
   font-weight: 700;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
