--- a/css/agency.css
+++ b/css/agency.css
@@ -1,3 +1,5 @@
+
+
 #map {
   height: 100%;
 }
@@ -317,6 +319,15 @@ header.masthead .post-heading .meta a {
   margin: 15px 0;
   text-transform: none;
 }
+
+#portfolio .gallery-item-90 {
+  height: 100px;
+  width: 100px
+}
+
+#portfolio .image-90 {
+/*  transform: rotate(90deg);
+*/}
 
 #portfolio .gallery-item {
   right: 0;
