--- a/css/agency.css
+++ b/css/agency.css
@@ -1,14 +1,13 @@
 
-
 #map {
-  height: 100%;
+  height: 100% !important;
 }
 /* Optional: Makes the sample page fill the window. */
-html, body {
+/*html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-}
+}*/
 
 .img-fluid {
   object-position: center;
