--- a/css/agency.css
+++ b/css/agency.css
@@ -20,6 +20,17 @@
   transform: rotate(90deg);
 }
 
+@media (max-width: 767px) {
+  .img-fluid-90 {
+  object-position: center;
+  object-fit: cover;
+  -moz-transform:rotate(-90deg);
+  -webkit-transform:rotate(-90deg);
+  -ms-transform:rotate(-90deg);
+  transform: rotate(-90deg);
+  }
+}
+
 
 
 body {
