--- a/css/agency.css
+++ b/css/agency.css
@@ -20,7 +20,7 @@
   transform: rotate(90deg);
 }
 
-@media (max-width: 767px) {
+/*@media (max-width: 767px) {
   .img-fluid-90 {
     object-position: center;
     object-fit: cover;
@@ -28,6 +28,21 @@
     -webkit-transform:rotate(90deg);
     -ms-transform:rotate(90deg);
     transform: rotate(90deg);
+  }
+}*/
+
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+  .img-fluid-90 {
+    transform: rotate(90deg);
+    -moz-transform:rotate(90deg);
+    -webkit-transform:rotate(90deg);
+    -ms-transform:rotate(90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
   }
 }
 
