--- a/css/agency.css
+++ b/css/agency.css
@@ -11,14 +11,16 @@
   object-fit: cover;
 }
 
-/*.img-fluid-90 {
+@media (min-width: 320px) {
+
+.img-fluid-90 {
   object-position: center;
   object-fit: cover;
   -moz-transform:rotate(90deg);
   -webkit-transform:rotate(90deg);
   -ms-transform:rotate(90deg);
   transform: rotate(90deg);
-}*/
+}
 
 /*@media (max-width: 767px) {
   .img-fluid-90 {
